--- a/.gitmodules
+++ b/.gitmodules
@@ -16,6 +16,9 @@
 [submodule ".vim/bundle/ctrlp.vim"]
 	path = .vim/bundle/ctrlp.vim
 	url = git://github.com/kien/ctrlp.vim.git
+[submodule ".vim/bundle/align"]
+        path = .vim/bundle/align
+        url = git@github.com:vim-scripts/Align.git
 [submodule ".vim/bundle/puppet"]
 	path = .vim/bundle/puppet
 	url = git://github.com/rodjek/vim-puppet.git
